--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "parcial2": {
+    "comics": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/parcial2",
+            "outputPath": "dist/comics",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -47,32 +47,25 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                }
-              ]
+              "buildOptimizer": true
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "parcial2:build"
+            "browserTarget": "comics:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "parcial2:build:production"
+              "browserTarget": "comics:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "parcial2:build"
+            "browserTarget": "comics:build"
           }
         },
         "test": {
@@ -106,20 +99,19 @@
         }
       }
     },
-    "parcial2-e2e": {
+    "comics-e2e": {
       "root": "e2e/",
       "projectType": "application",
-      "prefix": "",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "parcial2:serve"
+            "devServerTarget": "comics:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "parcial2:serve:production"
+              "devServerTarget": "comics:serve:production"
             }
           }
         },
@@ -135,5 +127,5 @@
       }
     }
   },
-  "defaultProject": "parcial2"
+  "defaultProject": "comics"
 }
